--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,3 +12,10 @@ h1{
     color: red;
     font-weight: bold;
 }
+.todoItem{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+}
