--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- alert and alert-danger are bootstrap classes -->
     <% if (locals.messages.errors) { %>
         <% messages.errors.forEach( el => { %>
-            <div class="alert alert-danger"><%= el.msg %></div>
+            <div class="alert alert-danger"><%= el.msg %></div> 
         <% }) %>    
     <% } %>
     <form action="/signup" method="POST">
